Changed the transaction service layout

--- a/transaction/.project
+++ b/transaction/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>blockchain</name>
+	<name>transaction</name>
 	<comment></comment>
 	<projects>
 	</projects>
