--- a/transaction/src/main/resources/application.properties
+++ b/transaction/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=9999
 #Mongo DB connection
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=Blockchain
+spring.data.mongodb.database=Transaction
